--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 subtitle: Data Science <span style="color:#f58506"> Portfolio </span>
 location: "San Francisco, CA"
 resume_url: /docs/resume.docx
-avatar_image: /img/1649894269784.JPG
+avatar_image: /img/1649894269784.jpeg
 
 #-------------------------------
 # Contact links
